+ An employee can now have more than one security profile (role based 
  security). [Ivo]
+ Added vcard export for employees/contacts/organizations. [Ivo]
+ Added invoice address to organization. [Ivo]
+ Added Japanese language file. [James]
+ Added robots.txt file so Achievo installations do not get spidered. [Ivo]
+ Added deliverables feature to project management. [Ivo]
* Upgraded to ATK5 backend. [Ivo,Sandy]
* Improved themability. [Boy]
* Fixed small bug in displaying the weeknumber on windows in the timereg
  weekview. [Sandy]
* Made role name obligatory. (bug #474) [Sandy]
* Title field for persons is now a dropdown instead of free input. [Ivo]  
* Updated Italian language file. [Fabrizio]
* Updated Danish language file. [Morten, Kent]
* Updated Spanish language file. [Ernesto]
* Fixed: postAdd in modules/calender/class.schedule.inc should return a
  boolean [Yury]

Changes in Achievo 1.1.0
------------------------
+ Session highjacking prevention is now configurable (default off). [Ivo]
+ Administrator pim now shows button for donations. [Ivo]
* Removed requirement that php should be compiled with --enable-bcmath. [Ivo]
* Fixed bug in recent project dropdown for projects without teammembers. [Ivo]
* Fixed 2 PHP5 incompatibilities. [Brian]
* Bugfix in phase display; it compared planned minutes to booked hours. [Ivo]
* Gantt chart now displays phase bars according to phase start/enddates. [Ivo]

Changes in Achievo 1.1RC3
-------------------------
+ Contact person field in project edit screen can be made obligatory with
  a config setting. [Harrie]
+ If only one search result is found, it is displayed directly. [Ivo]
+ Added bookmark icon (the 'swish' from achievo.org). [Ivo]
* Fixed sql injection vulnerability in the login screen. (bug #368) [Sandy]
* Fixed security bug with session hijacking. (bug #373) [Sandy]
* Fixed problem with empty dropdowns. (bug #333) [Sandy]
* Fixed bug in edit/add link when only one record was present. [Sandy]